--- a/src/style.css
+++ b/src/style.css
@@ -18,10 +18,11 @@
   }
   
   /* Do an horizontal flip when you move the mouse over the flip box container */
-  .flip-card:hover .flip-card-inner {
+  .flip-it .flip-card-inner {
     transform: rotateY(180deg);
   }
   
+
   /* Position the front and back side */
   .flip-card-front, .flip-card-back {
     position: absolute;
@@ -38,7 +39,6 @@
   
   /* Style the back side */
   .flip-card-back {
-    background-color: dodgerblue;
-    color: white;
+    background-color: #bbb;
     transform: rotateY(180deg);
   }
